--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remixicon": "^4.3.0",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.1"
   },
